<resources>
    <string name="app_name">Laboratori4</string>
    <string name="descripcionAntigua">Fundada el 10 de marzo de 1543, La Antigua Guatemala fue declarada Patrimonio Cultural de la Humanidad por la Unesco en el año 1979. Esta bella y mágica ciudad colonial guarda casi quinientos años de historia, con un clima privilegiado y una excepcional vista hacia los volcanes de Fuego y Acatenango.
Fue construida en el Valle de Panchoy y nombrada la tercera sede de la capital de Guatemala. En esta ciudad el tiempo se detuvo y quedó atrapado en las gruesas paredes de sus templos, sus monasterios y sus casas coloniales. Esta colorida población aún conserva edificaciones restauradas del siglo XVI y puede ser recorrida a pie a través de sus calles empedradas.
Desde el Cerro de la Cruz, ubicado al nororiente de la urbe, La Antigua Guatemala se ve impresionante. Admirable es también el emblemático Volcán de Agua, que ha sido testigo de las glorias y caídas de la población. La belleza de esta ciudad radica en cada uno de sus detalles. Los que la visitan quedan maravillados con sus atractivos históricos, antiguos templos y monasterios que forman parte de su legado.
Luego de haber sufrido varios terremotos, ha permanecido detenida en el tiempo y es admirada por sus calles empedradas, casas coloniales, monumentos civiles, leyendas y tradiciones.Los principales atractivos turísticos de la Antigua son El Palacio de los Capitanes Generales, El Convento y Arco de Santa Catalina, La Plaza Mayor, El Museo de Jade, La Antigua Catedral de Guatemala, el museo de la Universidad de San Carlos, la Ruta Santa del Hermano Pedro, entre otros. La ciudad también es rica en artesanías tales como tejidos típicos, cerámica, productos de plata y oro, cerería, productos metálicos, dulces típicos y gastronomía.
Para llegar a La Antigua Guatemala desde la Ciudad de Guatemala debe tomar la carretera CA-1, saliendo por la Calzada Roosevelt, pasando por San Lucas Sacatepéquez y girar hacia la derecha. La Antigua está situada a 40 Kilómetros del centro de la ciudad capital.</string>
    <string name="tikalTexto">Tikal es un sitio arqueológico maya situado en la región nororiental de Petén y uno de los más grandes y más conocidos de la región. Cuenta con una superficie total de 120 kilómetros cuadrados, un sector especial de 16 kilómetros cuadrados y alrededor de 13 500 estructuras conocidas (Diccionario Histórico Biográfico de Guatemala, 2004).
Se calcula que Tikal albergó hasta un máximo de 90 000 habitantes en el momento de su apogeo (Diccionario Histórico Biográfico de Guatemala, 2004).
El Parque Nacional Tikal, creado en 1955, es una reserva natural de 576 kms cuadrados, y ha sido declarado Monumento Nacional y Patrimonio Cultural de la Humanidad (Diccionario Histórico Biográfico de Guatemala, 2004).
Tikal se asentó en varias elevaciones naturales de piedra caliza, las cuales llegan a los 50 metros de altura. Dichas prominencias están rodeadas de zonas pantanosas llamadas “bajos”, las que posteriormente fueron modificadas para crear “aguadas” o reservas de agua. Su ubicación corresponde a un punto central o intermedio de la región maya y las Tierras Bajas Centrales, y constituía una posición estratégica para el control del paso constante de productos provenientes del Río Usumacinta, del Océano Atlántico, del Río de La Pasión y del Altiplano (Diccionario Histórico Biográfico de Guatemala, 2004).
En su fase final, el área principal de Tikal estaba marcada por una cantidad considerable de construcciones agrupadas en plazas, la principal de las cuales es la Gran Plaza. Existen además, la Plaza Este, la Plaza Oeste, la Plaza de los Siete Templos y el grupo conocido como Mundo Perdido (Diccionario Histórico Biográfico de Guatemala, 2004).
El tipo de los grandes templos de Tikal es característico: la planta del basamento es cuadrada o rectangular, de grandes dimensiones. Sobre una plataforma se levanta una serie de cuerpos escalonados, generalmente en número de ocho, cuya disposición y altura produce una pendiente bastante acentuada. Al frente se encuentra una escalera de un solo tramo que conduce a la parte alta, en la que una nueva plataforma con sus caras de talud sostiene el templo (Diccionario Histórico Biográfico de Guatemala, 2004).
Los muros llegan a tener hasta seis metros de grueso, en tanto que las cámaras o santuarios no alcanzan a veces ni un metro de ancho. Algunos templos tienen solo una cámara, mientras que otros tienen tienen dos o tres, distribuidas paralelamente y cuyos pesos van subiendo de nivel por medio de un escalón formado en las anchas puertas que las comunican (Diccionario Histórico Biográfico de Guatemala, 2004).
Una alta crestería se alza en la parte posterior del monumento, característica de esta región, cuyo objeto principal consiste en aumentar la importancia monumental del edificio. Además de los grandes templos, hay un número considerable de pequeños basamentos piramidales de planta cuadrada, con una escalera en cada lado, llamada altar de sacrificios (Móbil, 2002).
En 1955, gracias al proyecto de restauración ideado por el Museo de la Universidad de Pennsylvania, se empezó a estudiar y a excavar las ruinas de Tikal, cuya ejecución se puso en manos de eminentes arqueólogos como John Dimick y Edwin M. Shook (Haeussler, 1983). </string>
    <string name="sololaText">Sololá es un departamento de la República de Guatemala, situado en la región suroccidental del país. Tiene una extensión territorial de 1060 kilómetros cuadrados y su población es de aproximadamente 361 184 personas según la Encuesta Nacional de Condiciones de Vida -2006-. Cuenta con 19 municipios y su cabecera departamental es el municipio de Sololá (Diccionario Municipal de Guatemala, 2001).
Sololá limita al norte con los departamentos de Totonicapán y Quiché, al este con Chimaltenango, al sur con el departamento de Suchitepéquez y al oeste con Suchitepequez y Quetzaltenango. Sus principales idiomas son el castellano, k’iche’, kaqchikel y tz’utujil. Su temperatura habitual es fría y su fiesta titular es el 15 de agosto, en honor a la Virgen de la Asunción. Su fundación fue el 4 de noviembre de 1825 (Diccionario Municipal de Guatemala, 2001).Por su situación sobre la cordillera, Sololá tiene un terreno quebrado, sobresaliendo el volcán de Atitlán a 3537 metros sobre el nivel del mar, el volcán Tolimán de 3158 metros y el volcán San Pedro de 3020 metros, así como el cerro Santa Clara (Diccionario Municipal de Guatemala, 2001).
El accidente hidrográfico más importante en su territorio lo constituye el Lago de Atitlán, que es una de las principales fuentes económicas del departamento, pues además de ser un centro turístico de atractivo, sirve como medio de comunicación social y comercial entre los pueblos de la ribera, a la vez que surte a los habitantes de pescado, cangrejo, gallaretas y tul para la elaboración de artículos artesanales (Diccionario Municipal de Guatemala, 2001).
Una característica propia del Lago de Atitlán es un viento fuerte conocido como Xocomil, que se produce generalmente a medio día, cuando los vientos cálidos procedentes del sur chocan con las masas de aire más frías que provienen del altiplano, formando remolinos que agitan las aguas del lago en olas muy fuertes que pueden hacer zozobrar las embarcaciones (Lara, C., Rodríguez, F., García, C. y Esquivel, A., s.f.).
El lago posee una superficie de 125 kilómetros cuadrados y está a 1560 metros sobre el nivel del mar (Lara, C., Rodríguez, F., García, C. y Esquivel, A., s.f.).
Entre los ríos más importantes que cruzan el departamento pueden mencionarse el Río Nahualate, Río Coyolate, Río Madre Vieja, Río Mocá y algunos más que con la variedad de climas, hacen que su suelo sea muy fértil (Diccionario Municipal de Guatemala, 2001).</string>
    <string name="mainText"> Guatemala (náhuatl: Quauhtlemallan, "lugar de muchos árboles"),6​ oficialmente República de Guatemala, es un país soberano situado en América Central en su extremo noroccidental, en los países angloparlantes y otros lo sitúan en América del Norte.7​ Su cultura latinoamericana cuenta con una amplia cultura autóctona producto de la cultura maya y la cultura castellana durante la época virreinal española; es el país más poblado de América Central, con 16,301,286 de habitantes según censo realizado en el año 2018.8​
Asimismo, su capital, Ciudad de Guatemala, es la ciudad más poblada de América Central.
A pesar de su relativamente pequeña extensión territorial, Guatemala tiene una gran variedad climática, producto de su relieve montañoso que va desde el nivel del mar hasta los 4220 metros sobre ese nivel.9​ Esto propicia que en el país existan ecosistemas tan variados que van desde los manglares de los humedales del Pacífico hasta los bosques nublados de alta montaña. Limita al oeste y al norte con México, al este solo una línea de adyacencia con Belice, el golfo de Honduras (mar Caribe) y la República de Honduras, al sureste con El Salvador, y al sur con el océano Pacífico. El país posee una superficie de 108 889 km².2​ Su capital es la Ciudad de Guatemala, llamada oficialmente «Nueva Guatemala de la Asunción». El idioma oficial es el español, aunque existen veintidós idiomas mayas, los idiomas xinca y garífuna, estos dos idiomas se consideran en ‘peligro de extinción’, estos también hablados por la población afrodescendiente en el departamento caribeño de Izabal.10​ El territorio donde actualmente se ubica Guatemala, forma parte de Mesoamérica y en él se desarrollaron, junto a los países limítrofes, la cultura maya y la olmeca. Tras la conquista de América, Guatemala pasó a formar parte del Virreinato de Nueva España en calidad de Capitanía General. Tras su independencia de España en 1821, año en el que se constituyó como Reino de Guatemala, lo que hoy es Guatemala pasó a formar parte del Primer Imperio Mexicano así como también de la República Federal de Centro América; no siendo hasta el año 1847 cuando fue establecida la actual república y cuando el país empezó a abrirse con los países vecinos y estableciendo relaciones diplomáticas con algunas potencias del mundo. Tras el triunfo de una reforma liberal en 1871 se establecieron una serie de regímenes dictatoriales y poco democráticos hasta 1944, año en el que sucedió la Revolución de Guatemala de 1944. Dicha revolución perduró hasta el año 1954, año en el que un movimiento de liberación nacional retomó el poder del país y precipitó al país a una guerra civil, también llamado “el conflicto armado interno de Guatemala”, que comenzó en 1960 a 1996 Durante el gobierno de Álvaro Arzu.
Ya en el Siglo XXI, Guatemala contó con una política económica relativamente estable que lo posiciona actualmente como la novena economía en Latinoamérica.11​ No obstante, los niveles de pobreza y desigualdad de ingresos siguen siendo altos,12​ incluso más que cuando se firmaron los acuerdos de paz en 1996. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="antigua">Antigua</string>
    <string name="enviar">Enviar</string>
    <string name="realizar">Realizar</string>
    <string name="star">star</string>
    <string name="encuesta">TODO</string>
    <string name="Tipo">tipo</string>
    <string name="save">TODO</string>
    <string name="nueva_pregunta">Nueva Pregunta</string>
    <string name="perdon">Perdon mano no pude :/</string>
    <string name="saber">No se porque no salen las preguntas :(</string>
    <string name="resultados">RESULTADOS</string>
    <string name="rating">Rating:</string>
    <string name="num_encuestas">Encuestas:</string>
    <string name="newE">Nueva Encuesta</string>
    <string name="ver">Ver Respuestas</string>
    <string name="result">N :(</string>
    />
    />
    />
    />
</resources>
