<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.example.laboratori4.Model"
            />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="244dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/encuesta"
        android:contentDescription="@string/encuesta"
        app:layout_constraintBottom_toTopOf="@+id/antigua_buton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/star_Buton"
        android:layout_width="63dp"
        android:layout_height="34dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/star_big_on" />

    <Button
        android:id="@+id/antigua_buton"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:text="@string/realizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.232" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>